# authFinder

./: .gitignore  LICENSE  README.md  pyproject.toml
authfinder/: __init__.py  authfinder.py
exec_across_windows/: __init__.py  exec_across_windows.py
