[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authfinder"
version = "1.3.2"
description = "Execute commands and test authentication across Windows and Linux systems using multiple methods (WinRM, SMB, WMI, RDP, SSH, MSSQL, LDAP, Kerberos, FTP, VNC, databases, mail, and more)"
readme = "README.md"
authors = [
    {name = "Khael"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
keywords = ["security", "pentest", "authentication", "credential-testing", "windows", "linux", "winrm", "smb", "wmi", "rdp", "ssh", "ldap", "kerberos", "mssql", "ftp", "vnc", "postgresql", "mysql", "redis", "ipmi"]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.scripts]
authfinder = "authfinder.authfinder:main"

[project.urls]
Homepage = "https://github.com/KhaelK138/authfinder"
Repository = "https://github.com/KhaelK138/authfinder"
Issues = "https://github.com/KhaelK138/authfinder/issues"

[tool.setuptools]
packages = ["authfinder"]